k8s/service-extra.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-http2-extra-svc
spec:
  type: ClusterIP
  ports:
    - port: 81
      targetPort: 8080
      name: http2
  selector:
    app: hello-http2
