k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-http2-svc
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      name: http2
  selector:
    app: hello-http2
