k8s/istio-routes.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-http2-vsvc
spec:
  hosts:
  - "hello-http2.example.com"
  gateways:
  - hello-http2-gateway
  http:
  - match:
    - authority:
        exact: hello-http2.example.com
    route:
    - destination:
        port:
          number: 80
        host: hello-http2-svc
